@@ -1,3 +1,7 @@
+SimpleComplex/Utils 1.x, 2017-06-24
+-----------------------------------
+- Fixed some options deficiencies.
+
 SimpleComplex/Utils 1.x, 2017-06-23
 -----------------------------------
 - Cli confirm() and pre-confirming --yes/-y.
